# ko-embed

./: .gitattributes  .gitignore  .pyre_configuration  README.md  main.py  plan.md  pyproject.toml
.agent/workflows/: rubber-duck.md
configs/: config.yaml
configs/data/: combined.yaml  ourafla.yaml
configs/model/: bge_base_en.yaml  bge_large_en.yaml  bge_m3.yaml  bge_m3_ko.yaml  bge_m3_korean.yaml  kure_v1.yaml  mpnet_base.yaml  mxbai_large.yaml  qwen3_embedding_0_6b.yaml  sroberta.yaml  stsb_roberta_base_v2.yaml
results/: model_comparison.md  mteb_benchmark.md  mteb_bge_m3_ko_summary.csv  mteb_bge_m3_korean_summary.csv  mteb_bge_m3_summary.csv  mteb_kure_v1_summary.csv
results/mteb_bge_m3/BAAI__bge-m3/5617a9f61b028005a4858fdac845db406aefb181/: AutoRAGRetrieval.json  Ko-StrategyQA.json  KorSTS.json  model_meta.json  (+2 more)
scripts/: 00_preprocess.py
scripts/eval/: nli_eval_en.py  nli_eval_ko.py  proto_eval_en.py  proto_eval_ko.py  sts_eval_en.py  translate_test.py
scripts/explore/: 00_preprocess.py  01_embed.py  02_score.py  03_umap.py  04_compare_models.py  04_projector.py  05_search.py  06_sts_eval.py  07_bench.py  08_prototype_test.py  11_proto_viz.py  12_semantic_viz.py  13_sim_compare.py  14_nli_eval.py  15_en_sts_eval.py  16_en_nli_eval.py
scripts/finetune/: 01_download_datasets.py  01_explore_datasets.py  09_build_korean_dataset.py  10_finetune.py  11_build_en_dataset.py  utils.py
src/qcd/: __init__.py  loaders.py
src/qcd/embedding/: base.py  bge_m3.py  sbert.py
src/qcd/scoring/: prototype.py
src/qcd/translation/: nllb.py
src/qcd/utils/: seed.py
(+22 files in other folders)
